# PersonalBlogEngine

./: .dockerignore  .gitignore  Caddyfile  Cargo.toml  Dockerfile  README.md  docker-compose.yml  index.html  openapi.yaml
.github/workflows/: docker.yml
client_library/: .eslintignore  .eslintrc.js  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
client_library/.husky/: pre-commit
client_library/coverage/: clover.xml  coverage-final.json  lcov.info
client_library/coverage/lcov-report/: index.html  index.ts.html
client_library/src/: index.test.ts  index.ts
frontend/: index.html  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  vite.config.ts
frontend/src/: App.svelte
frontend/src/lib/: stores.ts
frontend/src/lib/components/: Editor.svelte  EditorNew.svelte  Files.svelte  Login.svelte  MainScreen.svelte  SetupScreen.svelte  Spinner.svelte  Tabs.svelte  ViewPost.svelte  upload_files.ts
migrations/2022-05-13-152201_create_posts/: down.sql  up.sql
migrations/2022-05-13-175150_users/: down.sql  up.sql
migrations/2022-06-02-140900_feedback/: down.sql  up.sql
migrations/2022-11-20-114638_uploads/: down.sql  up.sql
src/: actions.rs  db.rs  main.rs  models.rs  schema.rs  search.rs
src/routes/: account.rs  dashboard.rs  feedback.rs  manage.rs  mod.rs  public.rs  uploads.rs
