[package]
name = "PersonalBlogEngine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono", "uuidv07"] }
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.19", features = ["serde"] }
actix-identity = "0.4"
argon2 = {version = "0.3", features = ["std"] }
rand_core = { version = "0.6", features = ["std"] }
comrak = "0.12"
tantivy = "0.18.0"
tempfile = "3.3"
rust-embed = {version = "6.4", features = ["actix", "interpolate-folder-path"]}
mime_guess = "2.0"
markdown_to_text = '1.0'
diesel_migrations = "1.4"
actix-cors = "0.6"
uuid = { version = "0.8", features = ["v4", "serde"] }
blake3 = "1.3.1"
thiserror = "1.0.31"
actix-form-data = "0.6.2"
actix-multipart = "0.4.0"
base64 = "0.20.0"
actix-web-lab = "0.18.8"
