[package]
name = "PersonalBlogEngine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "postgres_backend", "uuid", "chrono"] }
actix-session = { version ="0.8.0", features = ["cookie-session"] }
dotenvy = "0.15.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.19", features = ["serde"] }
actix-identity = "0.6.0"
argon2 = {version = "0.5.2", features = ["std"] }
rand_core = { version = "0.6", features = ["std"] }
comrak = "0.19.0"
tantivy = "0.21.1"
tempfile = "3.3"
rust-embed = {version = "8.0.0", features = ["actix", "interpolate-folder-path"]}
mime_guess = "2.0"
markdown_to_text = '1.0'
diesel_migrations = "2.1.0"
actix-cors = "0.6"
uuid = { version = "1.5.0", features = ["v4", "serde"] }
blake3 = "1.3.1"
thiserror = "1.0.31"
actix-form-data = "0.6.2"
actix-multipart = "0.6.1"
base64 = "0.21.5"
actix-web-lab = "0.20.0"
